--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       </p>
     </div>
     <div class="six">
-      <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
-      <img src="img/hat.svg" alt="" class="hat">
+      <img src="img/" alt="" class="lydia-dp" id="imagePath">
+      <img src="img/" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
+        <h3 class="wish-hbd">Happy  Birthday!</h3>
         <h5 id="wishText">May the POWER always be with you! ;)</h5>
       </div>
     </div>
