--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <li><span id="second"></span>seconds</li>
     </ul>  
   </div>
-  <a href="./index1.html">Link to other pages</a>
+  <meta http-equiv="refresh" content"1;index1.html">
 </body>
 <script src="scripts/confetti.min.js" charset="utf-8"></script>
 <script src="scripts/index.js" charset="utf-8"></script>
