--- a/index1.html
+++ b/index1.html
@@ -14,8 +14,8 @@
 <body>
   <div class="container">
     <div class="one">
-      <h1 class="one">Hey
-        <span id="name">Lydia</span>
+      <h1 class="one">
+        <span id="name">Namu</span>
       </h1>
       <p class="two" id="greetingText">I really like your name btw!</p>
     </div>
@@ -46,8 +46,8 @@
       <img src="img/lydia2.png" alt="" class="lydia-dp" id="imagePath">
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
-        <h3 class="wish-hbd">Happy Birthday!</h3>
-        <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h3 class="wish-hbd">Happy  Birthday!</h3>
+        <h5 id="wishText">May the POWER always be with you! ;)</h5>
       </div>
     </div>
     <div class="seven">
